# MiniProjects

DiContainer/: main.cpp
Numbers/Headers/: BigNumber.h  Number.h
Numbers/Src/: BigNumber.cpp
Numbers/Tests/: main.cpp
PhoneBook/: PhoneBook.cpp  PhoneBook.h  main.cpp
Primitives/: Primitives.h
StopWatch/: StopWatch.cpp  StopWatch.h  Test.cpp
TasksPool/: CMakeLists.txt  main.cpp
TasksPool/Headers/: ITask.h  TaskPool.h  ThreadTaskSolver.h
TasksPool/Sources/: TaskPool.cpp  ThreadTaskSolver.cpp
